feat: change nullable indicator, update meta tags

--- a/index.html
+++ b/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/schemata.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Beautiful and Developer friendly Entity Relationship Diagram Builder">
-    <title>Schemata</title>
+    <!-- Primary Meta Tags -->
+    <title>Schemata — Developer-friendly Entity Relationship Diagram Builder</title>
+    <meta
+      name="title"
+      content="Schemata — Developer-friendly Entity Relationship Diagram Builder"
+    />
+    <meta
+      name="description"
+      content="Create entity-relationship diagrams quickly and easily, with a beautiful interface and keyboard navigation support."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://schemata.ruine.app/" />
+    <meta
+      property="og:title"
+      content="Schemata — Developer-friendly Entity Relationship Diagram Builder"
+    />
+    <meta
+      property="og:description"
+      content="Create entity-relationship diagrams quickly and easily, with a beautiful interface and keyboard navigation support."
+    />
+    <meta property="og:image" content="/schemata.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://schemata.ruine.app/" />
+    <meta
+      property="twitter:title"
+      content="Schemata — Developer-friendly Entity Relationship Diagram Builder"
+    />
+    <meta
+      property="twitter:description"
+      content="Create entity-relationship diagrams quickly and easily, with a beautiful interface and keyboard navigation support."
+    />
+    <meta property="twitter:image" content="/schemata.png" />
   </head>
   <body>
     <div id="root"></div>
